Perkin-UAT/force-app/main/default/objects/MasterFields__c/MasterFields__c.object-meta.xml
<CustomObject>
    <description>This object is used by administrators only, all other users will not have access. This object that holds object name, field name, and type, and description plus help text and Jira issues used to create or delete the field.</description>
    <label>MasterFields</label>
    <nameField>
        <label>MasterFields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MasterFields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>