Perkin-UAT/force-app/main/default/objects/MasterFields__c/fields/doNotDelete__c.field-meta.xml
<CustomField>
    <fullName>doNotDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>doNotDelete Indicates that this field is essential and should most likely not be deleted without deep analysis</description>
    <inlineHelpText>Check off if you want to Indicates that this field is essential and should most likely not be deleted without deep analysis</inlineHelpText>
    <label>doNotDelete</label>
    <type>Checkbox</type>
</CustomField>