Perkin-UAT/force-app/main/default/objects/MasterFields__c/fields/Field_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Display_Name__c</fullName>
    <description>The original field display name from the object</description>
    <inlineHelpText>Enter the original field display name from the object</inlineHelpText>
    <label>Field Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>