Perkin-UAT/force-app/main/default/objects/MasterFields__c/fields/fxAutoId__c.field-meta.xml
<CustomField>
    <fullName>fxAutoId__c</fullName>
    <description>Unique auto ID.</description>
    <displayFormat>Field-{000000000}</displayFormat>
    <externalId>true</externalId>
    <label>fxAutoId</label>
    <type>AutoNumber</type>
</CustomField>