Perkin-UAT/force-app/main/default/objects/MasterFields__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>the help text from the field involved</description>
    <inlineHelpText>Enter the help text from the field involved.</inlineHelpText>
    <label>Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>