Perkin-UAT/force-app/main/default/objects/MasterFields__c/fields/isCustom__c.field-meta.xml
<CustomField>
    <fullName>isCustom__c</fullName>
    <description>Field is Custom vs Native</description>
    <formula>RIGHT(Field_API_Name__c,3)= &quot;_c&quot;</formula>
    <inlineHelpText>Enter whether the Field is Custom vs Native</inlineHelpText>
    <label>isCustom</label>
    <type>Checkbox</type>
</CustomField>