Perkin-UAT/force-app/main/default/objects/MasterFields__c/fields/isExternal__c.field-meta.xml
<CustomField>
    <fullName>isExternal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field relates to another system</description>
    <inlineHelpText>If this field relates to another system, please check this off.</inlineHelpText>
    <label>isExternal</label>
    <type>Checkbox</type>
</CustomField>