Perkin-UAT/force-app/main/default/objects/MasterFields__c/fields/isFormula__c.field-meta.xml
<CustomField>
    <fullName>isFormula__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field uses formula to calculate the value</description>
    <inlineHelpText>Check if the Field uses formula to calculate the value</inlineHelpText>
    <label>isFormula</label>
    <type>Checkbox</type>
</CustomField>