Perkin-UAT/force-app/main/default/objects/MasterFields__c/fields/isPicklist__c.field-meta.xml
<CustomField>
    <fullName>isPicklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is a picklist</description>
    <inlineHelpText>check off if the field is a picklist</inlineHelpText>
    <label>isPicklist</label>
    <type>Checkbox</type>
</CustomField>