Perkin-UAT/force-app/main/default/objects/MasterFields__c/fields/isUnique__c.field-meta.xml
<CustomField>
    <fullName>isUnique__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field has unique values.</description>
    <inlineHelpText>Check off if the field has unique values.</inlineHelpText>
    <label>isUnique</label>
    <type>Checkbox</type>
</CustomField>