Perkin-UAT/force-app/main/default/objects/MasterFields__c/fields/Object_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Display_Name__c</fullName>
    <description>The Original Object Display Name where this field and value came from</description>
    <inlineHelpText>Enter The Original Object Display Name where this field and value came from</inlineHelpText>
    <label>Object Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>