Perkin-UAT/force-app/main/default/objects/MasterFields__c/fields/ReasonCreate__c.field-meta.xml
<CustomField>
    <fullName>ReasonCreate__c</fullName>
    <description>This holds Jira ticket and why the field was created</description>
    <inlineHelpText>Please enter the  Jira ticket and why the field was created</inlineHelpText>
    <label>ReasonCreate</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>