Perkin-UAT/force-app/main/default/objects/MasterFields__c/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <description>This is the default Record Name SF applies to every record. Here is an AutoNumber (but we use fxAutoId for consistency</description>
    <displayFormat>Field-{000000000}</displayFormat>
    <inlineHelpText>This is the default Record Name SF applies to every record. Here is an AutoNumber (but we use fxAutoId for consistency</inlineHelpText>
    <label>Record Name</label>
    <type>AutoNumber</type>
</CustomField>